--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rango-dropdownmenu",
-  "version": "rango-dropdownmenu",
+  "version": "1.0.0",
   "description": "Save time color picking and formating width Rango!",
   "main": "src/index.js",
   "bin": "src/index.js",
